<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre">Kira</string>
    <string name="like">4</string>
    <string name="toast">Tomar Foto</string>
    <string name="liketoast">Diste Like</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="menu_contacto">Contacto</string>
    <string name="acercade_Texto">Desarrollador independiente. Proyecto netamente academico </string>
    <string name="conNombre">Nombre</string>
    <string name="email">Correo Electronico</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar Mensaje</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="guardar">Guardar Cuenta</string>
    <string name="configurar">Configurar Cuenta</string>
    <string name="urlGit">https://github.com/DanielCifuentes05/</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="notificaciones">Recibir Notificaciones</string>
    <string name="clvCuenta">CuentaIg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>